runs/runs/github.com/ealtamir/tp2-optimizacion/logs/test-notebook-tp2.ipynb-2020-07-13T09.34.txt
[I 200713 09:35:33 inrepo:36] Testing notebook tp2.ipynb
[I 200713 09:35:34 inrepo:45] Found kernel python3
[I 200713 09:35:34 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
# paraboloid, booth, rosenbrock, beales, matyas, ackleys
Pair = namedtuple('FPair', ['f', 'min_val', 'dim'])
functions = {
    'paraboloid': Pair(lambda v: v[0] ** 2 + v[1] ** 2, 0, 2),
    'booth': Pair(lambda v: np.sum(np.array([(v[0] + 2 * v[1] - 7) ** 2, (2 * v[0] + v[1] - 5) ** 2])), 0, 2),
    'rosenbrock': Pair(lambda v: np.sum([(1 - v[1]) ** 2, 100 * (v[0] - v[1] * v[1]) ** 2]), 0, 2),
    'beales': Pair(lambda v: np.sum([(1.5 - v[0] + v[0] * v[1]) ** 2, (2.25 - v[0] + v[0] * v[1] ** 2) ** 2, (2.625 - v[0] + v[0] * v[1] ** 3) ** 2]), 0, 2),
    'matyas': Pair(lambda v: np.sum([.26 * (v[0] ** 2 + v[1] ** 2),  - .48 * v[0] * v[1]]), 0, 2),
    'ackleys': Pair(lambda v: np.sum([-20 * np.exp(-.2 * np.sqrt(.5 * v[0] ** 2 + v[1] ** 2)), - np.exp(.5 * (np.cos(2 * np.pi * v[0]) + np.cos(2 * np.pi * v[0]))), np.e, 20]), 0, 2),
    'easom': Pair(lambda v: (-np.cos(v[0]) * np.cos(v[1]) * np.exp(-((v[0] - np.pi) ** 2 + (v[1] - np.pi) ** 2))), -1, 2),
    ''
}
------------------

[0;36m  File [0;32m"<ipython-input-2-e7887722be84>"[0;36m, line [0;32m12[0m
[0;31m    }[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-e7887722be84>, line 12)


Container exited with status: {'Error': None, 'StatusCode': 1}
